--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -207,7 +207,7 @@
                         android:id="@+id/set_repeat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+                        android:text="Repeat Off"
                         android:textSize="15dp" />
 
                 </LinearLayout>
